[gd_scene load_steps=9 format=3 uid="uid://lg7tjjb1wgro"]

[ext_resource type="Script" path="res://Assets/Environment/Levels/Entity/Player/player.gd" id="1_jko8i"]
[ext_resource type="Texture2D" uid="uid://cvjyydcdygwf0" path="res://icon.svg" id="2_hu2dk"]

[sub_resource type="Animation" id="Animation_77182"]
resource_name = "HeadBob"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1.85, 1.85, 0.751334),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.05, 0), Vector3(0, -0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yute1"]
resource_name = "HeadTurnLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0349066), Vector3(0, 0, -0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8fvhm"]
resource_name = "HeadTurnRight"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0349066), Vector3(0, 0, 0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fury6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehrcg"]
_data = {
"HeadBob": SubResource("Animation_77182"),
"HeadTurnLeft": SubResource("Animation_yute1"),
"HeadTurnRight": SubResource("Animation_8fvhm"),
"RESET": SubResource("Animation_fury6")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_67g61"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_jko8i")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="FrontRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2)

[node name="DetectRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -4)
debug_shape_custom_color = Color(0, 0, 10, 1)
debug_shape_thickness = 1

[node name="BackRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 0.25
omni_range = 2.0

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ehrcg")
}

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
texture = ExtResource("2_hu2dk")

[node name="cooldown_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_67g61")
